# wondertrade

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  copy_bins_win.bat  updatelog.md
CTPOptLoader/: CMakeLists.txt  CTPOptLoader.vcxproj.filters
Includes/: HftStrategyDefs.h  ICtaStraCtx.h  IParserApi.h
ParserCTP/: CMakeLists.txt
ParserCTPOpt/: CMakeLists.txt  ParserCTPOpt.vcxproj.filters
ParserUDP/: CMakeLists.txt  ParserUDP.vcxproj.filters
QuoteFactory/: QuoteFactory.vcxproj.filters
Share/: IniHelper.hpp
TestPorter/: TestPorter.vcxproj
TraderCTPMini/: CMakeLists.txt  TraderCTPMini.vcxproj.filters
TraderCTPOpt/: TraderCTPOpt.h
TraderMocker/: TraderMocker.vcxproj.filters
TraderTester/: main.cpp
TraderXTP/: CMakeLists.txt  TraderXTP.vcxproj.filters
TraderiTap/: TraderiTap.vcxproj.filters
WTSTools/: CsvHelper.cpp
WTSUtils/: CMakeLists.txt  WTSUtils.vcxproj  WTSUtils.vcxproj.filters
WtBtCore/: CMakeLists.txt  EventNotifier.cpp  HisDataReplayer.cpp  MatchEngine.cpp  MatchEngine.h  WtHelper.cpp  WtHelper.h
WtBtPorter/: CMakeLists.txt  ExpCtaMocker.cpp  ExpCtaMocker.h  ExpHftMocker.h  WtBtPorter.vcxproj.filters
WtBtRunner/: WtBtRunner.cpp  WtBtRunner.vcxproj.filters
WtCore/: ActionPolicyMgr.cpp  CtaStraBaseCtx.h  HftStraBaseCtx.h  HftStrategyMgr.h  ITrdNotifySink.h  ParserAdapter.cpp  SelStraBaseCtx.cpp  SelStraBaseCtx.h  SelStraContext.h  WtCore.vcxproj  WtCtaTicker.h  WtDataManager.cpp  WtDistExecuter.cpp  WtEngine.cpp  (+5 more)
src/TraderCTP/: CMakeLists.txt  TraderCTP.cpp  TraderCTP.h  TraderCTP.vcxproj  TraderCTP.vcxproj.filters
(+555 files in other folders)
